--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-15T08:05:26.798190Z",
-     "start_time": "2025-05-15T08:05:26.782603Z"
+     "end_time": "2025-05-18T13:06:31.706245Z",
+     "start_time": "2025-05-18T13:06:31.692733Z"
     }
    },
    "source": [
@@ -16,13 +16,34 @@
     "import torch"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 160
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T08:05:26.845191Z",
-     "start_time": "2025-05-15T08:05:26.804192Z"
+     "end_time": "2025-05-18T13:06:31.722264Z",
+     "start_time": "2025-05-18T13:06:31.710246Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "RANDOM_STATE = 42\n",
+    "TRAIN = False\n",
+    "DEMONSTRATION = True\n",
+    "\n",
+    "MODEL = 'DeepPavlov/rubert-base-cased'\n",
+    "OUTPUT_PATH = f'output/{MODEL}-finetuned'\n",
+    "MODEL_PATH = f'models/{MODEL}-finetuned'"
+   ],
+   "id": "5cfc13df78b1d7f1",
+   "outputs": [],
+   "execution_count": 161
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:31.800510Z",
+     "start_time": "2025-05-18T13:06:31.754482Z"
     }
    },
    "cell_type": "code",
@@ -173,18 +194,18 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 162
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T08:05:26.924473Z",
-     "start_time": "2025-05-15T08:05:26.909474Z"
+     "end_time": "2025-05-18T13:06:31.879341Z",
+     "start_time": "2025-05-18T13:06:31.863833Z"
     }
    },
    "cell_type": "code",
@@ -264,258 +285,266 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 163
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T08:13:26.009855Z",
-     "start_time": "2025-05-15T08:05:27.114053Z"
+     "end_time": "2025-05-18T13:06:31.972866Z",
+     "start_time": "2025-05-18T13:06:31.942879Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments\n",
-    "from datasets import load_dataset, ClassLabel, Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, f1_score\n",
-    "from torch.nn import CrossEntropyLoss\n",
-    "from transformers import EarlyStoppingCallback\n",
-    "\n",
+    "from datasets import Dataset\n",
     "\n",
     "df_train, df_val = train_test_split(\n",
-    "    df, test_size=0.2, random_state=42, stratify=df['stars']\n",
+    "    df, test_size=0.2, random_state=RANDOM_STATE, stratify=df['stars']\n",
     ")\n",
     "\n",
-    "# 2. Create HuggingFace datasets\n",
     "dataset = {\n",
     "    'train': Dataset.from_pandas(df_train.reset_index(drop=True)),\n",
     "    'validation': Dataset.from_pandas(df_val.reset_index(drop=True))\n",
-    "}\n",
+    "}"
+   ],
+   "id": "f2117e56b9b29d82",
+   "outputs": [],
+   "execution_count": 164
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:32.035410Z",
+     "start_time": "2025-05-18T13:06:32.017965Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch.nn as nn\n",
+    "from transformers import Trainer\n",
     "\n",
-    "# 3. Compute class weights for imbalance\n",
+    "class WeightedCELossTrainer(Trainer):\n",
+    "    def __init__(self, *args, class_weights=None, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.class_weights = class_weights\n",
+    "\n",
+    "    def compute_loss(self, model, inputs, return_outputs=False, **kwargs):\n",
+    "        labels = inputs.get(\"labels\")\n",
+    "        outputs = model(**inputs)\n",
+    "        logits = outputs.get(\"logits\")\n",
+    "\n",
+    "        loss_fct = nn.CrossEntropyLoss(weight=self.class_weights.to(model.device))\n",
+    "        loss = loss_fct(logits, labels)\n",
+    "        \n",
+    "        return (loss, outputs) if return_outputs else loss"
+   ],
+   "id": "557a40df61431a56",
+   "outputs": [],
+   "execution_count": 165
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:32.050920Z",
+     "start_time": "2025-05-18T13:06:32.040410Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from datasets import ClassLabel\n",
+    "\n",
     "class_counts = np.bincount(df_train['stars'] - 1, minlength=5)\n",
-    "# Inverse frequency scaled\n",
     "class_weights = (1.0 / class_counts)\n",
     "class_weights = class_weights / class_weights.sum() * len(class_counts)\n",
     "class_weights = torch.tensor(class_weights, dtype=torch.float)\n",
     "\n",
-    "# 4. Prepare labels and tokenization Prepare labels and tokenization\n",
-    "labels = ClassLabel(num_classes=5, names=[str(i) for i in range(1,6)])\n",
-    "\n",
+    "labels = ClassLabel(num_classes=5, names=[str(i) for i in range(1,6)])"
+   ],
+   "id": "1d96082ebef2f9a8",
+   "outputs": [],
+   "execution_count": 166
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:32.097333Z",
+     "start_time": "2025-05-18T13:06:32.083247Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def preprocess(example):\n",
     "    example['label'] = labels.str2int(str(example['stars']))\n",
-    "    return example\n",
-    "\n",
-    "dataset = {split: ds.map(preprocess) for split, ds in dataset.items()}\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained('DeepPavlov/rubert-base-cased')\n",
+    "    return example"
+   ],
+   "id": "42f1693d3c468c65",
+   "outputs": [],
+   "execution_count": 167
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:32.144779Z",
+     "start_time": "2025-05-18T13:06:32.130349Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def tokenize_fn(batch):\n",
     "    texts = [\n",
-    "        f\"[PRODUCT] {pn} [REVIEW] {rt} [CATEGORY] {cat}\"\n",
+    "        (f\"[PRODUCT] {pn} \"\n",
+    "         f\"[REVIEW] {rt} \"\n",
+    "         f\"[CATEGORY] {cat} \")\n",
     "        for pn, rt, cat in zip(batch['product_name'], batch['review_text'], batch['category'])\n",
     "    ]\n",
-    "    return tokenizer(texts, truncation=True, padding='max_length', max_length=128)\n",
-    "\n",
+    "    \n",
+    "    return tokenizer(texts, truncation=True, padding='max_length', max_length=256)"
+   ],
+   "id": "303b3c8ca69ffaac",
+   "outputs": [],
+   "execution_count": 168
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:33.342004Z",
+     "start_time": "2025-05-18T13:06:32.177716Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "dataset = {split: ds.map(tokenize_fn, batched=True) for split, ds in dataset.items()}\n",
     "dataset = {\n",
     "    split: ds.remove_columns(['product_name', 'review_text', 'category', 'stars'])\n",
     "    for split, ds in dataset.items()\n",
-    "}\n",
-    "\n",
-    "# 5. Load model\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "    'DeepPavlov/rubert-base-cased',\n",
-    "    num_labels=5,\n",
-    ")\n",
-    "\n",
-    "# 6. Custom Trainer to apply class weights in loss\n",
-    "torch.cuda.empty_cache()\n",
-    "class WeightedTrainer(Trainer):\n",
-    "    def compute_loss(self, model, inputs, return_outputs=False, **kwargs):\n",
-    "        labels = inputs.pop(\"labels\")\n",
-    "        outputs = model(**inputs)\n",
-    "        logits = outputs.logits\n",
-    "        loss_fct = CrossEntropyLoss(weight=class_weights.to(model.device))\n",
-    "        loss = loss_fct(logits.view(-1, model.config.num_labels), labels.view(-1))\n",
-    "        return (loss, outputs) if return_outputs else loss\n",
-    "\n",
-    "# 7. Training arguments\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir='output/rubert-finetuned',\n",
-    "    num_train_epochs=100,\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=32,\n",
-    "    learning_rate=2e-5,\n",
-    "    weight_decay=0.01,\n",
-    "    logging_steps=100,\n",
-    "    eval_strategy='epoch',\n",
-    "    save_strategy='epoch',\n",
-    "    load_best_model_at_end=True,\n",
-    "    metric_for_best_model='macro_f1',\n",
-    ")\n",
-    "\n",
-    "# 8. Metrics\n",
-    "def compute_metrics(eval_pred):\n",
-    "    logits, labels = eval_pred\n",
-    "    preds = np.argmax(logits, axis=-1)\n",
-    "    return {\n",
-    "        'accuracy': accuracy_score(labels, preds),\n",
-    "        'macro_f1': f1_score(labels, preds, average='macro')\n",
-    "    }\n",
-    "\n",
-    "# 9. Initialize trainer and train\n",
-    "trainer = WeightedTrainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=dataset['train'],\n",
-    "    eval_dataset=dataset['validation'],\n",
-    "    tokenizer=tokenizer,\n",
-    "    compute_metrics=compute_metrics,\n",
-    "    callbacks=[EarlyStoppingCallback(early_stopping_patience=5)]\n",
-    ")\n",
-    "\n",
-    "trainer.train()\n",
-    "trainer.save_model('models/rubert-finetuned')"
+    "}"
    ],
-   "id": "1ed035bdb940089e",
+   "id": "ff11d4f918021f5c",
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 9358/9358 [00:00<00:00, 42536.54 examples/s]\n",
-      "Map: 100%|██████████| 2340/2340 [00:00<00:00, 43333.03 examples/s]\n",
-      "Map: 100%|██████████| 9358/9358 [00:00<00:00, 18076.19 examples/s]\n",
-      "Map: 100%|██████████| 2340/2340 [00:00<00:00, 18000.02 examples/s]\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at DeepPavlov/rubert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "C:\\Users\\DesMo\\AppData\\Local\\Temp\\ipykernel_4100\\125584193.py:91: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `WeightedTrainer.__init__`. Use `processing_class` instead.\n",
-      "  trainer = WeightedTrainer(\n"
+      "Map: 100%|██████████| 9358/9358 [00:00<00:00, 10197.62 examples/s]\n",
+      "Map: 100%|██████████| 2340/2340 [00:00<00:00, 12352.32 examples/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='4095' max='58500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 4095/58500 07:54 < 1:45:13, 8.62 it/s, Epoch 7/100]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "      <th>Macro F1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1.253800</td>\n",
-       "      <td>1.202211</td>\n",
-       "      <td>0.732906</td>\n",
-       "      <td>0.418208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1.052500</td>\n",
-       "      <td>1.252298</td>\n",
-       "      <td>0.775641</td>\n",
-       "      <td>0.478588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.970800</td>\n",
-       "      <td>1.494214</td>\n",
-       "      <td>0.468376</td>\n",
-       "      <td>0.337801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>0.831000</td>\n",
-       "      <td>1.823864</td>\n",
-       "      <td>0.749573</td>\n",
-       "      <td>0.428250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>0.764100</td>\n",
-       "      <td>1.874616</td>\n",
-       "      <td>0.773077</td>\n",
-       "      <td>0.468438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>0.485400</td>\n",
-       "      <td>2.403090</td>\n",
-       "      <td>0.777350</td>\n",
-       "      <td>0.466722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>0.458000</td>\n",
-       "      <td>2.640055</td>\n",
-       "      <td>0.794872</td>\n",
-       "      <td>0.461404</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 169
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T08:13:35.216748Z",
-     "start_time": "2025-05-15T08:13:33.668274Z"
+     "end_time": "2025-05-18T13:06:33.387992Z",
+     "start_time": "2025-05-18T13:06:33.373791Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df_test = pd.read_csv('test.csv')\n",
-    "df_test.drop(columns=['usefull', 'unusefull'], inplace=True)\n",
-    "dataset_test = Dataset.from_pandas(df_test)\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
     "\n",
-    "def tokenize_test(batch):\n",
-    "    texts = [\n",
-    "        f\"[PRODUCT] {pn} [REVIEW] {rt} [CATEGORY] {cat}\"\n",
-    "        for pn, rt, cat in zip(batch['product_name'], batch['review_text'], batch['category'])\n",
-    "    ]\n",
-    "    return tokenizer(texts, truncation=True, padding='max_length', max_length=128)\n",
+    "def compute_metrics(pred):\n",
+    "    labels = pred.label_ids\n",
+    "    preds = np.argmax(pred.predictions, axis=1)\n",
+    "    return {\n",
+    "        'accuracy': accuracy_score(labels, preds),\n",
+    "        'f1': f1_score(labels, preds, average='macro'),\n",
+    "    }"
+   ],
+   "id": "536b00582fd6862f",
+   "outputs": [],
+   "execution_count": 170
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:33.435101Z",
+     "start_time": "2025-05-18T13:06:33.420578Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformers import Trainer, TrainingArguments, EarlyStoppingCallback, AutoModelForSequenceClassification, AutoTokenizer\n",
+    "from datasets import load_dataset, ClassLabel, Dataset\n",
     "\n",
-    "\n",
-    "dataset_test = dataset_test.map(tokenize_test, batched=True)\n",
-    "dataset_test = dataset_test.remove_columns(\n",
-    "    [col for col in dataset_test.column_names if col not in tokenizer.model_input_names]\n",
-    ")\n",
-    "\n",
-    "test_outputs = trainer.predict(dataset_test)\n",
-    "preds = np.argmax(test_outputs.predictions, axis=-1)\n",
-    "y_pred_test = [int(labels.int2str(int(label))) for label in preds]\n",
-    "\n",
-    "df_submission = pd.DataFrame({\n",
-    "    '_id': df_test['_id'],\n",
-    "    'stars': y_pred_test\n",
-    "})\n",
-    "df_submission.to_csv('submission.csv', index=False)"
+    "if TRAIN:\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(MODEL, num_labels=5)\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
+    "    dataset = {split: ds.map(preprocess) for split, ds in dataset.items()}\n",
+    "    \n",
+    "    training_args = TrainingArguments(\n",
+    "        output_dir=OUTPUT_PATH,\n",
+    "        eval_strategy=\"epoch\",\n",
+    "        save_strategy=\"epoch\",\n",
+    "        load_best_model_at_end=True,\n",
+    "        metric_for_best_model=\"f1\",\n",
+    "        save_total_limit=2,\n",
+    "        num_train_epochs=30,\n",
+    "        per_device_train_batch_size=8,\n",
+    "        per_device_eval_batch_size=8,\n",
+    "        warmup_ratio=0.1,\n",
+    "        weight_decay=0.01,\n",
+    "        learning_rate=2e-5,\n",
+    "        logging_steps=25,\n",
+    "        seed=RANDOM_STATE,\n",
+    "        fp16=torch.cuda.is_available(),\n",
+    "    )\n",
+    "    \n",
+    "    trainer = WeightedCELossTrainer(\n",
+    "        model=model,\n",
+    "        args=training_args,\n",
+    "        train_dataset=dataset['train'],\n",
+    "        eval_dataset=dataset['validation'],\n",
+    "        tokenizer=tokenizer,\n",
+    "        compute_metrics=compute_metrics,\n",
+    "        callbacks=[EarlyStoppingCallback(early_stopping_patience=5)],\n",
+    "        class_weights=class_weights,\n",
+    "    )\n",
+    "    \n",
+    "    trainer.train()\n",
+    "    trainer.save_model(MODEL_PATH)"
+   ],
+   "id": "1ed035bdb940089e",
+   "outputs": [],
+   "execution_count": 171
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-18T13:06:37.126220Z",
+     "start_time": "2025-05-18T13:06:33.466373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "if DEMONSTRATION:\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(MODEL_PATH, local_files_only=True)\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(MODEL_PATH, local_files_only=True)\n",
+    "    trainer = Trainer(model=model, tokenizer=tokenizer)\n",
+    "    \n",
+    "    df_test = pd.read_csv('test.csv')\n",
+    "    df_test.drop(columns=['usefull', 'unusefull'], inplace=True)\n",
+    "    dataset_test = Dataset.from_pandas(df_test)\n",
+    "    dataset_test = dataset_test.map(tokenize_fn, batched=True)\n",
+    "    dataset_test = dataset_test.remove_columns(\n",
+    "        [col for col in dataset_test.column_names if col not in tokenizer.model_input_names]\n",
+    "    )\n",
+    "    \n",
+    "    test_outputs = trainer.predict(dataset_test)\n",
+    "    preds = np.argmax(test_outputs.predictions, axis=-1)\n",
+    "    y_pred_test = [int(labels.int2str(int(label))) for label in preds]\n",
+    "    \n",
+    "    df_submission = pd.DataFrame({\n",
+    "        '_id': df_test['_id'],\n",
+    "        'stars': y_pred_test\n",
+    "    })\n",
+    "    df_submission.to_csv('submission.csv', index=False)"
    ],
    "id": "7484caa5ba036719",
    "outputs": [
@@ -523,7 +552,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 957/957 [00:00<00:00, 18765.10 examples/s]\n"
+      "C:\\Users\\DesMo\\AppData\\Local\\Temp\\ipykernel_18324\\1769435970.py:4: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "  trainer = Trainer(model=model, tokenizer=tokenizer)\n",
+      "Map: 100%|██████████| 957/957 [00:00<00:00, 12258.05 examples/s]\n"
      ]
     },
     {
@@ -537,7 +568,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 13
+   "execution_count": 172
   }
  ],
  "metadata": {
